[package]
name = "fibonacci-like"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/fibonacci-like"
repository = "https://github.com/jewlexx/fibonacci-like"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
num-bigint = { version = "0.4", optional = true }

[features]
default = ["std", "big-int"]
big-int = ["num-bigint", "std"]
std = []
