[package]
name = "fibonacci-like"
description = "A small crate to help you interact with second order sequences, such as the Fibonacci sequence, with no_std support"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
keywords = ["fibonacci", "sequence", "second order", "no_std"]
categories = ["algorithms", "mathematics", "no standard library"]
documentation = "https://docs.rs/fibonacci-like"
repository = "https://github.com/jewlexx/fibonacci-like"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
num-bigint = { version = "0.4", optional = true }

[features]
default = ["std", "big-int"]
big-int = ["num-bigint", "std"]
std = []
